# terx

./: .env.example  .gitignore  404.html  BENCHMARKS.md  BROWSER_USE.md  LAUNCH.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
benchmarks/: index.html
changelog/: index.html
development/: index.html
docs/: benchmarks.md  changelog.md  development.md  index.html  index.md  project-structure.md  quickstart.md  stagehand.md  workflow.md
examples/: browser_use_demo.py  demo.py
quickstart/: index.html
search/: search_index.json
terx/: __init__.py  cli.py  demo.py
terx/agent/: __init__.py  healer.py
terx/benchmarks/: __init__.py  baseline.py  real_agent.py
terx/cache/: __init__.py  cache.py
terx/cdp/: __init__.py  bridge.py  session.py
terx/dom/: __init__.py  extractor.py
terx/evals/: __init__.py  local_suite.py
terx/integrations/: __init__.py  browser_use.py
terx/server/: __init__.py  mcp.py
terx/vision/: __init__.py  ssim.py
tests/: test_core.py
workflow/: index.html
