[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terx"
version = "0.2.0"
description = "Memory layer for browser agents — zero LLM tokens on repeated tasks. Writes .vcr files compatible with Agent VCR."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ixchio" }]
keywords = [
    "browser-agent", "cdp", "chrome-devtools-protocol",
    "mcp", "model-context-protocol", "browser-automation",
    "agent-memory", "semantic-cache", "browser-use",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.9",
    "mcp>=1.0",
    "mmh3>=4.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
]
vision = [
    "opencv-python-headless>=4.0",
    "scikit-image>=0.20",
]
healing = [
    "litellm>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "rich>=13.0",
    "ruff>=0.4",
    "python-dotenv>=1.0",
]
benchmark = [
    "groq>=0.9",
    "python-dotenv>=1.0",
]
all = ["terx[embeddings,vision,healing,dev,benchmark]"]

[project.scripts]
terx-server    = "terx.server.mcp:main"
terx-bench     = "terx.benchmarks.baseline:main"
terx-bench-real = "terx.benchmarks.real_agent:main"

[project.urls]
Homepage      = "https://github.com/ixchio/terx"
Repository    = "https://github.com/ixchio/terx"
Documentation = "https://github.com/ixchio/terx/tree/main/docs"
Issues        = "https://github.com/ixchio/terx/issues"
Changelog     = "https://github.com/ixchio/terx/blob/main/docs/changelog.md"

[tool.hatch.build.targets.wheel]
packages = ["terx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
